# libmpi

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  multiarch.yaml  multiarch.yml
cmake/: Config.cmake.in  ConfigureTarget.cmake  target_configure.cmake
docs/: README.template.md
mpi/: CMakeLists.txt  mpi-asm.c  mpi-asm.h  mpi-binary.c  mpi-binary.h  mpi-compiler.h  mpi-conf.h  mpi-montgomery.c  mpi-montgomery.h  mpi-optimizer.c  mpi-optimizer.h  mpi-prime.c  mpi-rsa.c  mpi-rsa.h  mpi.c  mpi.h
mpi/asm/: montgomery-avx2.c  montgomery-avx512.c
mpi/asm/intel64/: bn_uaddadd_m7as.asm  bn_uaddsub_m7as.asm  bn_um7.inc  bn_umul.inc  mont_mul1024_avx2as.asm  mont_sqr1024_avx2as.asm  mpi_mont_reduction_m7as.asm  mpi_uadd_m7as.asm  mpi_udiv_u32_m7as.asm  mpi_uinc_udec_m7as.asm  mpi_umul_acc_m7as.asm  mpi_umul_m7as.asm  mpi_umul_usqr_redc_srvl9.asm  mpi_usqr_m7as.asm  mpi_usub_m7as.asm  mred_basic.inc  variant.inc
mpn/: CMakeLists.txt  mpn-asm.c  mpn-asm.h  mpn-binary.c  mpn-binary.h  mpn-conf.h  mpn-division.c  mpn-montgomery.c  mpn-montgomery.h  mpn-optimizer.c  mpn-optimizer.h
mpn/asm/: asmdefs.inc  ia_32e.inc  ia_emm.inc  montgomery-avx2.c  montgomery-avx512.c
mpn/asm/intel64/: bn_uaddadd_m7as.asm  bn_uaddsub_m7as.asm  bn_umul_basic.inc  bn_umulpp.inc  bn_umulpp_basic.inc  bn_umulschool.inc  bn_usqr.inc  bn_usqr_basic.inc  bn_usqrpp.inc  bn_usqrpp_basic.inc  bn_usqrschool.inc  cpinitas.asm  mont_mul_avx2as.asm  mont_sqr_avx2as.asm  mpi_mont_reduction_m7as.asm  mpi_uadd_m7as.asm  mpi_uinc_udec_m7as.asm  mpi_umul_acc_m7as.asm  mpi_umul_m7as.asm  mpi_umul_usqr_redc_srvl9.asm  mpi_umul_usqr_redc_srvl9pp.asm  mpi_usqr_m7as.asm  mpi_usub_m7as.asm  mred.inc  mred_pp.inc  mred_pp_basic.inc  variant.inc
tests/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmark.hpp  ini.h  logger.h  mpi-compiler.h  mpn-division.c  nameof.h  profiler.h  tabulate.cc  tabulate.h  test.cc  unittest-mpi.cpp
